# bootdisk

./: .env.example  Cargo.toml  DEVCONTAINER_GUIDE.md  LICENSE  README.md  bootdisk.code-workspace  bootdisk_logging.py  bootdisk_schema.yaml  devcontainer-manager.sh  docs-config-example.yaml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  test-devcontainer.sh
.devcontainer/agents/: langchain_agents.py
.github/: labeler.yml
.github/agents/: SECRETS.md  project-manager.md
.github/copilot-instructions/: README.md  communicator.md  devops.md  documentation.md  global.md  pr-reviewer.md  qa-evaluator.md  security.md  swe.md  test-engineer.md
.github/instructions/: communicator.md  devops.md  documentation.md  project-manager.md  qa-evaluator.md  security.md  swe.md  test-engineer.md
.github/prompts/: README.md  code-implementation.md  communication.md  devops.md  documentation-generation.md  pr-review-agent.md  project-management.md  quality-assurance.md  security.md  testing-validation.md  workflow-coordination.md
.github/workflows/: ci.yml  pr-automation.yml  pr-review-agent.yml  release.yml
agents/: README.md  __init__.py
agents/core/: __init__.py  manager.py  workflows.py
agents/roles/: __init__.py  swe.py
agents/tools/: __init__.py  api.py  integration.py
config/: docs-config.yaml
docs/: PROJECT_STRUCTURE.md  README.md
docs/agents/: documentation-workflow.md  overview.md  workflows.md
docs/devcontainer/: guide.md
docs/developer/: project-structure.md
docs/getting-started/: dev-setup.md  (+2 more)
output/: preseed.cfg
scripts/: lint.sh  node-docker.sh  pr_review_agent.py
src/: iso.rs  lib.rs  main.rs  mirrors.rs  preseed.rs  schema.rs  tests.rs
tools/: integration.py
